force-app/main/default/objects/QTB_StateCityForValidation__mdt/QTB_StateCityForValidation__mdt.object-meta.xml
<CustomObject>
    <label>QTB_StateCityForValidation</label>
    <pluralLabel>QTB_StateCityForValidation</pluralLabel>
</CustomObject>