force-app/main/default/objects/QTB_StateCityForValidation__mdt/fields/QTB_CityCode__c.field-meta.xml
<CustomField>
    <fullName>QTB_CityCode__c</fullName>
    <label>QTB_CityCode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>