force-app/main/default/objects/QTB_StateCityForValidation__mdt/fields/QTB_isCity__c.field-meta.xml
<CustomField>
    <fullName>QTB_isCity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTB_isCity</label>
    <type>Checkbox</type>
</CustomField>