force-app/main/default/objects/QTB_StateCityForValidation__mdt/fields/QTB_isState__c.field-meta.xml
<CustomField>
    <fullName>QTB_isState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTB_isState</label>
    <type>Checkbox</type>
</CustomField>