force-app/main/default/objects/QTB_StateCityForValidation__mdt/fields/QTB_StateTextCode__c.field-meta.xml
<CustomField>
    <fullName>QTB_StateTextCode__c</fullName>
    <label>QTB_StateTextCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>